--- a/app/views/workallocation/pages/wa-PA-00321-2018-c-staff.html
+++ b/app/views/workallocation/pages/wa-PA-00321-2018-c-staff.html
@@ -36,7 +36,7 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="wa-PA-00321-2018-c">
+        <a class="govuk-tabs__tab" href="wa-PA-00321-2018-c-staff">
           Tasks
         </a>
       </li>
@@ -95,7 +95,7 @@ Case details
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <p class="govuk-body"><strong>Generate decision and reasons</strong> </p>
             <dl class="govuk-summary-list govuk-summary-list--no-border">
-              <!--        <div class="govuk-summary-list__row">
+              <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                           <span style="padding-left:25px">Priority</span>
                         </dt>
@@ -105,7 +105,7 @@ Case details
                           classes: "govuk-tag--yellow"
                         })}}
                         </dd>
-                      </div> -->
+                      </div>
                   <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                           <span style="padding-left:25px">Task created</span>
