--- a/app/views/workallocation/pages/lms-staff.html
+++ b/app/views/workallocation/pages/lms-staff.html
@@ -34,8 +34,9 @@ My work
               <th scope="col" class="govuk-table__header" aria-sort="none">Location</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Task</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Task created</th>
-            
+              <th scope="col" class="govuk-table__header" aria-sort="none">Priority</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Person</th>
+              <th scope="col" class="govuk-table__header" aria-sort="none"></th>
             </tr>
           </thead>
           <tbody>
@@ -45,9 +46,17 @@ My work
               <td data-label="Reference">Protection</td>
               <td data-label="Status">Taylor House</td>
               <td data-label="Date">Review respondent evidence</td>
+                <td data-label="Amount">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }} </td>
+  <td data-label="Status">  {{govukTag({
+        text: "low",
+        classes: "govuk-tag--grey"
+      })}}
+    </td>
 
-                <td data-label="Amount">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}  </td>
-      <td data-label="Date">Judge Beech</td>
+
+        <td data-label="Status">Judge Beech</td>
+          <td data-label="Status"></td>
+
             </tr>
           </tbody>
         </table>
@@ -58,10 +67,10 @@ My work
         {{ govukButton({
         text: 'Unassign',
         classes: "govuk-!-margin-right-5",
-        href: "wa-mytasks-u"
+        href: "wa-mytasks-u-staff"
         }) }}
 
-<p><a class="govuk-body" href="/workallocation/pages/wa-mytasks-ao">Cancel</a></p>
+<p><a class="govuk-body" href="/workallocation/pages/wa-mytasks-ao-staff">Cancel</a></p>
 
 
     </form>
