--- a/app/views/workallocation/pages/reassign-b-staff.html
+++ b/app/views/workallocation/pages/reassign-b-staff.html
@@ -7,17 +7,17 @@
 My work
 {% endblock %}
 {% block content %}
-<div class="hmcts-page-heading">
-  <div class="hmcts-page-heading__title">
-    <h1 class="govuk-heading-xl">Unassign task</h1>
-  </div>
-</div>
 
 
-    <p>Unassign this task. This will send it back to the available task list for someone to pick up.</p>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Reassign task</span>
+  Check your answers
+</h1>
 
+    <div id="waste-hint" class="govuk-hint">
+      Check you are reassigning work to the right person.
+    </div>
 
-    <h2 class="govuk-heading-m">Task summary</h2>
 
     <div class="hmcts-scrollable-pane">
       <div class="hmcts-scrollable-pane__wrapper">
@@ -34,8 +34,9 @@ My work
               <th scope="col" class="govuk-table__header" aria-sort="none">Location</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Task</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Task created</th>
-            
+              <th scope="col" class="govuk-table__header" aria-sort="none">Priority</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Person</th>
+              <th scope="col" class="govuk-table__header" aria-sort="none"></th>
             </tr>
           </thead>
           <tbody>
@@ -45,9 +46,16 @@ My work
               <td data-label="Reference">Protection</td>
               <td data-label="Status">Taylor House</td>
               <td data-label="Date">Review respondent evidence</td>
+                <td data-label="Amount">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }} </td>
+  <td data-label="Status">  {{govukTag({
+        text: "low",
+        classes: "govuk-tag--grey"
+      })}}
+    </td>
 
-                <td data-label="Amount">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}  </td>
-      <td data-label="Date">Judge Beech</td>
+
+        <td data-label="Status">Judge Birch</td>
+          <td data-label="Status"><a href="reassign-staff">Change</a></td>
             </tr>
           </tbody>
         </table>
@@ -56,13 +64,18 @@ My work
     </div>
     <form>
         {{ govukButton({
-        text: 'Unassign',
+        text: 'Reassign',
         classes: "govuk-!-margin-right-5",
-        href: "wa-mytasks-u"
+        href: "wa-mytasks-r-staff"
         }) }}
-
-<p><a class="govuk-body" href="/workallocation/pages/wa-mytasks-ao">Cancel</a></p>
-
+<p><a class="govuk-body" href="/workallocation/pages/wa-mytasks-ao-staff">Cancel</a></p>
+<!--
+        {{ govukButton({
+        text: 'Cancel',
+        classes: "govuk-button--secondary",
+        href: "/workallocation/pages/wa-mytasks-ao-staff"
+        }) }}
+-->
 
     </form>
     {% endblock %}
