--- a/app/views/workallocation/pages/wa-PA-00467-2017-all-staff.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-all-staff.html
@@ -7,11 +7,10 @@
 Case details
 {% endblock %}
 {% block content %}
-
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
     <div>
-      <h1 class="govuk-heading-xl">PA/00321/2018</h1>
+      <h1 class="govuk-heading-xl">PA/00467/2017</h1>
     </div>
     <div style="display: flex; align-items:right">
       <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
@@ -36,7 +35,7 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="wa-PA-00321-2018-c">
+        <a class="govuk-tabs__tab" href="#">
           Tasks
         </a>
       </li>
@@ -51,32 +50,32 @@ Case details
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Appeal
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Appellent
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Documents
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Directions
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Applications
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Case notes
         </a>
       </li>
@@ -90,22 +89,22 @@ Case details
       <div>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-
             <h2 class="govuk-heading-m">Active tasks</h2>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <p class="govuk-body"><strong>Generate decision and reasons</strong> </p>
+
+            <p class="govuk-body"><strong>Allocate a hearing judge</strong> </p>
             <dl class="govuk-summary-list govuk-summary-list--no-border">
-              <!--        <div class="govuk-summary-list__row">
+                <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                           <span style="padding-left:25px">Priority</span>
                         </dt>
                         <dd class="govuk-summary-list__value">
                           {{govukTag({
-                          text: "MEDIUM",
-                          classes: "govuk-tag--yellow"
+                          text: "low",
+                          classes: "govuk-tag--grey"
                         })}}
                         </dd>
-                      </div> -->
+                      </div>
                   <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                           <span style="padding-left:25px">Task created</span>
@@ -114,6 +113,7 @@ Case details
                           {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}
                         </dd>
                       </div>
+
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                   <span style="padding-left:25px">Assigned to</span>
@@ -124,7 +124,7 @@ Case details
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                <span style="padding-left:25px">Manage</span>
+                  <span style="padding-left:25px">Manage</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>
@@ -135,14 +135,14 @@ Case details
                   <span style="padding-left:25px">Next steps</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  <a href="#">Generate decision and reasons</a>
+                  <a href="wa-PA-00467-2017-hj-staff">Allocate a hearing judge</a>
                 </dd>
               </div>
             </dl>
-
+          </div>
+        </div>
+        <div class="govuk-grid-column-one-third">
+        </div>
+      </div>
     </div>
-    <div class="govuk-grid-column-one-third">
-    </div>
-  </div>
-</div>
-{% endblock %}
+    {% endblock %}
