--- a/app/views/caseaccess/pages/myaccess-p.html
+++ b/app/views/caseaccess/pages/myaccess-p.html
@@ -22,12 +22,12 @@ My work
         <nav class="hmcts-sub-navigation">
           <ul class="hmcts-sub-navigation__list">
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="mywork">
+              <a class="hmcts-sub-navigation__link" href="#">
                 My tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="available-tasks">
+              <a class="hmcts-sub-navigation__link" href="#">
                 Available tasks
               </a>
             </li>
