--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,9 +9,10 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (22/07/21)
+      Last updated (28/07/21)
     </h2>
     <p class="govuk-body-l">Page widths have been increased to new wider width.<br><span style="color: red">Email confirmations removed & pending reinstated</span></p>
+    <p class="govuk-body-l">To be updated 29/7 - Staff - which include both Date created & Priority column (3.4)</p>
     <div style="display: flex; margin-top: 80px;">
       <div style="width: 800px;">
 
@@ -52,9 +53,9 @@ GOV.UK Prototype Kit
 
         <h2 class="govuk-heading-m">(APPROVER) Approve specific access request <br> from AVAILABLE TASKS</h2>
         <h3 class="govuk-heading-s">Scenario C - Part 1a - Grant request Specific Access to case</h3>
-        <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=judiciary&">Available tasks</a><br>specific access - Flow approve</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Active tasks</a><br>Assign to me - specific access - Flow approve</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=judiciary&">Assigned</a><br>specific access - Flow approve</p>
+        <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=judiciary&">Available tasks</a><br>specific access - Flow approve<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Active tasks</a><br>Assign to me - specific access - Flow approve<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=judiciary&">Assigned</a><br>specific access - Flow approve<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Review specific access request</a><br>specific access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=judiciary&">Review specific access request error</a><br>specific access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=judiciary&">Grant duration of case access
@@ -72,15 +73,15 @@ GOV.UK Prototype Kit
         <h3 class="govuk-heading-s">Scenario C - Part 1b - Grant request Specific Access to case</h3>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=judiciary&">Case view - Overview</a><br>specific access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=judiciary&">Case view - Role / access</a><br>specific access - Flow approve</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>specific access - Flow approve</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=judiciary&">Case view - assigned yourself a task</a><br>specific access - Flow approve</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>specific access - Flow approve<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=judiciary&">Case view - assigned yourself a task</a><br>specific access - Flow approve<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Case view - Review specific access request</a><br>specific access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=judiciary&">Case view - Review specific access request error</a><br>specific access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=judiciary&">Case view - Grant duration of case access
           </a><br>specific access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case-error?usertype=judiciary&">Grant duration of case access error</a><br>specific access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=judiciary&">Case view - Access approved</a><br>specific access - Flow approve<br><span style="color: red">*Reinstated</span></p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=judiciary&">Case view - Tasks</a><br>specific access - Flow approve</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=judiciary&">Case view - Tasks</a><br>specific access - Flow approve<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
 
 
         <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
@@ -102,7 +103,7 @@ GOV.UK Prototype Kit
 
         <h2 class="govuk-heading-m">(APPROVER) Reject specific access request<br> from AVAILABE TASKS</h2>
         <h3 class="govuk-heading-s">Scenario D (a) - Reject specific access to case </h3>
-        <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=judiciary&">Available tasks</a><br>specific access - Flow rejected</p>
+        <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=judiciary&">Available tasks</a><br>specific access - Flow rejected<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=judiciary&">Review specific access request</a><br>specific access - Flow rejected</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=judiciary&">Reject specific access request - request more information
           </a><br>specific access - Flow rejected</p>
@@ -117,14 +118,14 @@ GOV.UK Prototype Kit
         <h3 class="govuk-heading-s">Scenario D (b) - Reject specific access to case</h3>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=judiciary&">Case view - Overview</a><br>specific access - Flow reject</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=judiciary&">Case view - Role / access</a><br>specific access - Flow reject</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>specific access - Flow reject</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>specific access - Flow reject<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Case view - Review specific access request</a><br>specific access - Flow reject</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case?usertype=judiciary&">Case view - Reject specific access request - request more information
           </a><br>specific access - Flow reject</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case-error?usertype=judiciary&">Reject specific access request - request more information error
             </a><br>specific access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc-case?usertype=judiciary&">Case view - Access denied</a><br>specific access - Flow reject<br><span style="color: red">*Reinstated</span></p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=judiciary&">Case view - Tasks</a><br>specific access - Flow rejected</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=judiciary&">Case view - Tasks</a><br>specific access - Flow rejected<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
 
         <!-- SECTION BREAK -->
 
@@ -142,7 +143,7 @@ GOV.UK Prototype Kit
 
         <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
   <!--        <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p> -->
-        <p><a target="_blank" href="/caseaccess/pages/booking?usertype=judiciary&">Booking UI</a><br>Select type of access</br></p>
+        <p><a target="_blank" href="/caseaccess/pages/booking?usertype=judiciary&">Booking UI</a><br>Select type of access</br>(UPDATED WITH LATEST 3.4 WA DESIGN)</p>
       <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=judiciary&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
   <!--      <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=judiciary&">Booking UI</a><br>Return post logout - single</br></p> -->
     <!--         <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=judiciary&">Booking UI</a><br>Return post logout - multi</br></p>
@@ -188,9 +189,9 @@ GOV.UK Prototype Kit
 
           <h2 class="govuk-heading-m">(APPROVER) Approve specific access request <br> from AVAILABLE TASKS</h2>
           <h3 class="govuk-heading-s">Scenario C - Part 1a - Grant request Specific Access to case</h3>
-          <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>specific access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Active tasks</a><br>Assign to me - specific access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Assigned</a><br>specific access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Active tasks</a><br>Assign to me - specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Assigned</a><br>specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&"">Review specific access request</a><br>specific access - Flow approve</p>
               <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=staff&">Review specific access request error</a><br>specific access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Grant duration of case access
@@ -204,15 +205,15 @@ GOV.UK Prototype Kit
           <h3 class="govuk-heading-s">Scenario C - Part 1b - Grant request Specific Access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=staff&">Case view - Overview</a><br>specific access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=staff&">Case view - Role / access</a><br>specific access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>specific access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Case view - assigned yourself a task</a><br>specific access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Case view - assigned yourself a task</a><br>specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&">Case view - Review specific access request</a><br>specific access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=staff&">Case view - Review specific access request error</a><br>specific access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Case view - Grant duration of case access
             </a><br>specific access - Flow approve</p>
             <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case-error?usertype=staff&">Grant duration of case access error</a><br>specific access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Case view - Access approved</a><br>specific access - Flow approve<br><span style="color: red">*Reinstated</span></p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>specific access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
           <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
 
           <!-- SECTION BREAK -->
@@ -232,7 +233,7 @@ GOV.UK Prototype Kit
 
           <h2 class="govuk-heading-m">(APPROVER) Reject specific access request<br> from AVAILABE TASKS</h2>
           <h3 class="govuk-heading-s">Scenario D (a) - Reject specific access to case </h3>
-          <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>specific access - Flow rejected</p>
+          <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>specific access - Flow rejected<br>(TO BE UPDATED to 3.4)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=staff&">Review specific access request</a><br>specific access - Flow rejected</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=staff&">Reject specific access request - request more information
             </a><br>specific access - Flow rejected</p>
@@ -247,14 +248,14 @@ GOV.UK Prototype Kit
           <h3 class="govuk-heading-s">Scenario D (b) - Reject specific access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=staff&">Case view - Overview</a><br>specific access - Flow reject</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=staff&">Case view - Role / access</a><br>specific access - Flow reject</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>specific access - Flow reject</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>specific access - Flow reject<br>(TO BE UPDATED to 3.4)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&">Case view - Review specific access request</a><br>specific access - Flow reject</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case?usertype=staff&">Case view - Reject specific access request - request more information
             </a><br>specific access - Flow reject</p>
             <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case-error?usertype=staff&">Reject specific access request - request more information error
               </a><br>specific access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc-case?usertype=staff&">Case view - Access denied</a><br>specific access - Flow reject<br><span style="color: red">*Reinstated</span></p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>specific access - Flow rejected</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>specific access - Flow rejected<br>(TO BE UPDATED to 3.4)</p>
 
           <!-- SECTION BREAK -->
 
@@ -272,7 +273,7 @@ GOV.UK Prototype Kit
 
           <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
       <!--    <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p> -->
-          <p><a target="_blank" href="/caseaccess/pages/booking?usertype=staff&">Booking UI</a><br>Select type of access</br></p>
+          <p><a target="_blank" href="/caseaccess/pages/booking?usertype=staff&">Booking UI</a><br>Select type of access<br>(TO BE UPDATED to 3.4)</p>
         <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=staff&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
       <!--    <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=staff&">Booking UI</a><br>Return post logout - single</br></p> -->
       <!--         <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=staff&">Booking UI</a><br>Return post logout - multi</br></p>
